# none_euclid_chess

./: .gitignore  Doxyfile.in  README.md  uml.md
1/: .gitignore
1/src/: cli.cpp  cli.hpp  main.cpp  organization.cpp  organization.hpp  return_type.hpp
2/: .gitignore  CMakeLists.txt  Doxyfile
2/docs/html/: WordArray_8cpp.html  WordArray_8cpp__incl.map  WordArray_8cpp__incl.md5  WordArray_8hpp.html  WordArray_8hpp__dep__incl.map  WordArray_8hpp__dep__incl.md5  WordArray_8hpp__incl.map  WordArray_8hpp__incl.md5  WordArray_8hpp_source.html  Word_8cpp.html  Word_8cpp__incl.map  Word_8cpp__incl.md5  Word_8hpp.html  Word_8hpp__dep__incl.map  Word_8hpp__dep__incl.md5  Word_8hpp__incl.map  Word_8hpp__incl.md5  Word_8hpp_source.html  annotated.html  classWord-members.html  classWord.html  classWordArray-members.html  classWordArray.html  classWordArray__coll__graph.map  classWordArray__coll__graph.md5  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  menudata.js
2/docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  related_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
2/include/: Word.hpp  WordArray.hpp
2/src/: Word.cpp  WordArray.cpp
2/tests/: testWord.cpp  testWordArray.cpp
3/: .gitignore  CMakeLists.txt  README.md  coverage.sh
3/benchmarks/: benchmark.cpp  demo_portals.py  plot.py
3/examples/: grid_example.cpp  validation_test.cpp
3/include/board/: Cell.hpp  GameBoard.hpp  PortalLink.hpp
3/include/board/surfaces/: CircularSurface.hpp  CylindricalSurface.hpp  RectangularSurface.hpp  SphericalSurface.hpp  Surface.hpp
3/include/common/: BoardPosition.hpp  Enums.hpp  Move.hpp
3/include/container/: Grid2D.hpp  Grid2DIterator.hpp  Grid2DNode.hpp
3/include/game/: ChessClock.hpp  GameHistory.hpp  GameManager.hpp  Player.hpp
3/include/pieces/: Bishop.hpp  ChessPiece.hpp  King.hpp  Knight.hpp  Pawn.hpp  Queen.hpp  Rook.hpp
3/include/utils/: ThreadedVerdictCalculator.hpp
3/src/: main.cpp
3/src/board/: Cell.cpp  GameBoard.cpp  PortalLink.cpp
3/src/board/surfaces/: CircularSurface.cpp  CylindricalSurface.cpp  RectangularSurface.cpp  SphericalSurface.cpp  Surface.cpp
3/src/common/: BoardPosition.cpp  Move.cpp
3/src/container/: Grid2D.tpp  Grid2DIterator.tpp  Grid2DNode.tcc  Grid2DNode.tpp
3/src/game/: ChessClock.cpp  GameHistory.cpp  GameManager.cpp  Player.cpp
3/src/pieces/: Bishop.cpp  ChessPiece.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
3/src/utils/: ThreadedVerdictCalculator.cpp
3/tests/: test_cylindrical.cpp  test_move_validation.cpp  test_noneuclidean_surfaces.cpp  test_portals.cpp  test_standard_surface.cpp
benchmarks/: benchmark.cpp
include/board/: Cell.hpp  PortalLink.hpp
include/board/surfaces/: RectangularSurface.hpp  StandardSurface.hpp
include/common/: Move.hpp
include/container/: Grid2D.hpp
include/game/: GameManager.hpp  Player.hpp
include/pieces/: King.hpp  Pawn.hpp  Queen.hpp
include/utils/: ThreadedVerdictCalculator.hpp
src/: main.cpp
src/board/: Cell.cpp  PortalLink.cpp
src/board/surfaces/: RectangularSurface.cpp  SphericalSurface.cpp  StandardSurface.cpp
src/common/: Move.cpp
src/game/: GameHistory.cpp
src/pieces/: Knight.cpp  Rook.cpp
src/utils/: ThreadedVerdictCalculator.cpp
tests/: test_hypothetical_check.cpp  test_iterator_detailed.cpp  test_surface_grid.cpp  test_surfaces.cpp  test_verdict_calculator.cpp
